# Puissance4

./: Agent.cpp  Agent.h  CMakeLists.txt  Game.cpp  Game.h  Puissance4.cpp  Puissance4.h
Checkers/: CMakeLists.txt  Checkers.cpp  Checkers.h
ConnectFour/: CMakeLists.txt  Puissance4.h
